[package]
name = "actix-blog-app"
version = "0.1.0"
authors = ["Julio Daniel Reyes <nemesiscodex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde = { version = "1.0.104", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde"] }
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.5"
tokio-pg-mapper-derive = "0.1.5"
deadpool-postgres = "0.5.5"
tokio-postgres = { version = "0.5.3", features = ["with-chrono-0_4", "with-uuid-0_8"] }
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"


[dev-dependencies]
serde_json = "1.0.48"
lazy_static = "1.4.0"